# AgriTech

./: .gitignore  .gitmodules  README.md
AgritechINO/ESP32ROS2/: ESP32ROS2.ino
AgritechINO/SensorFusion/: SensorFusion.ino
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/sensor_logger/lib/sensor_logger/: mission  sensor_logger  watering
install/sensor_logger/share/sensor_logger/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
ros2_ws/color_detector/: color_detector.py
ros2_ws/puzzlebot_linefollower/: package.xml  setup.cfg  setup.py
ros2_ws/puzzlebot_linefollower/puzzlebot_linefollower/: line_follower.py
ros2_ws/src/sensor_logger/: package.xml  setup.py
ros2_ws/src/sensor_logger/resource/: sensor_logger_node.py
ros2_ws/src/sensor_logger/sensor_logger/: sensor_logger_node.py  watering_node.py
