<?xml version="1.0"?>
<package format="3">
  <name>puzzlebot_linefollower</name>
  <version>0.0.1</version>
  <description>Line follower for Manchester Puzzlebot using blue line detection</description>

  <maintainer email="user@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>std_msgs</depend>

  <exec_depend>python3-opencv</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

